err/gistpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gistpy-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/gistpy'...
Compiling './lib/python3.5/site-packages/gistpy/auth.py'...
***   File "./lib/python3.5/site-packages/gistpy/auth.py", line 38
    print u"'os.environ[\"{0}\"]' was not found.\n".format(APP_TOKEN)
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gistpy/command'...
Compiling './lib/python3.5/site-packages/gistpy/command/create.py'...
***   File "./lib/python3.5/site-packages/gistpy/command/create.py", line 52
    print "CREATE ====> {0}".format(response["html_url"])
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gistpy/command/edit.py'...
***   File "./lib/python3.5/site-packages/gistpy/command/edit.py", line 35
    print u"EDIT ====> {0}".format(response["html_url"])
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gistpy/command/get.py'...
***   File "./lib/python3.5/site-packages/gistpy/command/get.py", line 28
    print u"Get ====> {0}".format(response["html_url"])
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gistpy/command/register.py'...
***   File "./lib/python3.5/site-packages/gistpy/command/register.py", line 32
    print u"Try to register this appliation."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gistpy/command/simple.py'...
***   File "./lib/python3.5/site-packages/gistpy/command/simple.py", line 38
    print u"Can't store text in the clipboard."
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gistpy/dispatch.py'...
***   File "./lib/python3.5/site-packages/gistpy/dispatch.py", line 32
    except Exception, emg:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gistpy/util.py'...
***   File "./lib/python3.5/site-packages/gistpy/util.py", line 13
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restkit'...
Compiling './lib/python3.5/site-packages/restkit/client.py'...
***   File "./lib/python3.5/site-packages/restkit/client.py", line 346
    except socket.gaierror, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit/contrib'...
Compiling './lib/python3.5/site-packages/restkit/contrib/console.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/console.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/contrib/ipython_shell.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/ipython_shell.py", line 50
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restkit/datastructures.py'...
***   File "./lib/python3.5/site-packages/restkit/datastructures.py", line 162
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/errors.py'...
***   File "./lib/python3.5/site-packages/restkit/errors.py", line 32
    except (NameError, ValueError, KeyError), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/oauth2.py'...
***   File "./lib/python3.5/site-packages/restkit/oauth2.py", line 84
    except UnicodeDecodeError, le:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit-4.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socketpool'...
Listing './lib/python3.5/site-packages/socketpool-0.5.3.egg-info'...
Listing './restkit'...
Listing './share'...
Listing './share/python-wheels'...
Listing './socketpool'...
